@@ -3,21 +3,24 @@
 # See https://github.com/craigcitro/r-travis
 #     https://github.com/eddelbuettel/r-travis/
 
+sudo: required
+
 language: c
-#
+
 before_install:
-  #- curl -OL http://raw.github.com/eddelbuettel/r-travis/master/scripts/travis-tool.sh
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
   - ./travis-tool.sh bootstrap
-#
+
 install:
-  - ./travis-tool.sh install_r Rcpp 
-  - ./travis-tool.sh install_r xts
-#
+  - ./travis-tool.sh install_apt-get r-cran-rcpp r-cran-xts
+
 script:
   - ./travis-tool.sh run_tests
-#
+
+after_failure:
+  - ./travis-tool.sh dump_logs
+
 notifications:
   email:
     on_success: change
